# HAUV-Final-Engineering-Project

./: README.md
Code/ESP32/rov_esp_esc_check/: rov_esp_esc_check.ino
Code/ESP32/rov_esp_main/: rov_esp_main.ino
Code/ESP32/rov_esp_main_rtos/: rov_esp_main_rtos.ino
Code/ESP32/rov_esp_servo_check/: rov_esp_servo_check.ino
DOC/Charts/: IMU Comparision.xls  Power Consumption.xlsx  RT Board Comparision.xls
DOC/Reports/: Pre 2024-038.docx
DOC/Sources/: Build your own underwater drone (ROV) - CPS 5 Course - YouTube.url  EXRAY - Hydromea.url  Electronics control system for an underwater remotely operated vehicle - YouTube.url  How to save time in developing an UUV or USV. (Unmanned Marine Systems) - YouTube.url  Hydrus AUV - Autonomous Underwater Vehicle.url  Net Patch Tool Demonstration - Aquaculture - DTG3 ROV - YouTube.url  OceanOneK, Stanford’s underwater humanoid robot, swims to new depths - YouTube.url  Reparación Red Lobera 2X1 con Robot Submarino (ROV) - YouTube.url  The Deep Manoeuvre (Mélységi Manőver) - YouTube.url  deeptrekker-lp-pivot-revolution.url
DOC/Sources/Project Yoni/: Gantt diagram.xlsx  Project IPs.xlsx
Operation/: Change to IP .100.bat  ROV_UP.lnk
rov_ws/src/autopilot_pkg/: setup.cfg  setup.py
src/autopilot_pkg/: package.xml  setup.cfg  setup.py
src/autopilot_pkg/autopilot_pkg/: dvl_node.py  guidance_node.py  imu_node.py
src/autopilot_pkg/launch/: rov_launch.py
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/camera_pkg/: camera_node.py
src/config/: rov.urdf
src/my_launch_pkg/: package.xml  setup.cfg  setup.py
(+23 files in other folders)
