[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
install_requires =
    setuptools

[options.data_files]
resource/ament_index/resource_index/packages =
    resource/my_launch_pkg
share/my_launch_pkg =
    package.xml
share/my_launch_pkg/launch =
    my_launch_pkg/launch/start_nodes.launch.py
